# fireplace

./: CMakeLists.txt  README.md  fireplace.service.in  kiosk_main.cpp  kiosk_window_manager.cpp  kiosk_window_manager.h
mediator/: Cargo.toml  README.md
mediator/src/: lib.rs
